add api create nurse account and get my nurse account info
